feat: Home 컴포넌트 구현

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="te-ing's portfolio"
       content="프론트엔드 개발자 김태중 포트폴리오"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400;500;600;700&family=IBM+Plex+Sans:wght@200;300;400;500;600;700&family=Noto+Sans:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
     <title>te-ing's portfolio</title>
   </head>
   <body>
